# rpp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE-MIT  NOTICE  PROVENANCE.md  README.md  pyproject.toml
docs/: RATIONALE.md  RPP-000-publication-vs-validity.md  SPEC.md  WDC-ADMISSIBILITY-BRIDGE.md  family-placement.md  operator-attestation-api.md  rpp-projection.md
docs/gaps/: GAP-001-ARCHIVAL.md  GAP-002-OPERATOR-EVIDENCE.md
examples/: action.json  attestation.json  challenge.json  claim.json  subject-chain.md
lexicons/: zone.neutral.rpp.action.json  zone.neutral.rpp.attestation.json  zone.neutral.rpp.challenge.json  zone.neutral.rpp.claim.json
src/rpp/: __init__.py  app.py  index.py  loader.py
src/rpp/templates/: index.html  subject.html
tests/: test_index.py  test_loader.py
