[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rpp"
version = "0.1.0"
description = "ATProto-native receipts and reviewability overlay for governance-relevant claims"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
authors = [{ name = "James Beck" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
