[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpp"
version = "0.1.0"
description = "ATProto-native receipts and reviewability overlay for governance-relevant claims"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
authors = [{ name = "James Beck" }]
dependencies = ["flask>=3.0"]

[project.scripts]
rpp-viewer = "rpp.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
